k8s/apps/product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-controller
  template:
    metadata:
      labels:
        app: product-controller
    spec:
      containers:
        - name: product-controller
          image: devops-dsols-app:latest
          imagePullPolicy: IfNotPresent
          command: ["./app", "-type=controller", "-component=product", "-config=config/local.yml"]
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: app-config-volume
              mountPath: /app/config/local.yml
              subPath: local.yml
      volumes:
        - name: app-config-volume
          configMap:
            name: app-config
---
apiVersion: v1
kind: Service
metadata:
  name: product-controller
spec:
  selector:
    app: product-controller
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: devops-dsols-app:latest
          imagePullPolicy: IfNotPresent
          command: ["./app", "-type=service", "-component=product", "-config=config/local.yml"]
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: app-config-volume
              mountPath: /app/config/local.yml
              subPath: local.yml
      volumes:
        - name: app-config-volume
          configMap:
            name: app-config
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
