k8s/apps/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-controller
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: user-controller
  template:
    metadata:
      labels:
        app: user-controller
    spec:
      containers:
        - name: user-controller
          image: devops-dsols-app:latest
          imagePullPolicy: IfNotPresent
          command: ["./app", "-type=controller", "-component=user", "-config=config/local.yml"]
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: app-config-volume
              mountPath: /app/config/local.yml
              subPath: local.yml
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
            limits:
              cpu: "50m"
              memory: "256Mi"

      volumes:
        - name: app-config-volume
          configMap:
            name: app-config
---
apiVersion: v1
kind: Service
metadata:
  name: user-controller
spec:
  selector:
    app: user-controller
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: devops-dsols-app:latest
          imagePullPolicy: IfNotPresent
          command: ["./app", "-type=service", "-component=user", "-config=config/local.yml"]
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: app-config-volume
              mountPath: /app/config/local.yml
              subPath: local.yml
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
            limits:
              cpu: "50m"
              memory: "256Mi"
      volumes:
        - name: app-config-volume
          configMap:
            name: app-config
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
